@@ -1168,38 +1168,41 @@ sub reloadNSCD
 
 # Method: ous
 #
-#       Returns an array containing all the OUs sorted by canonicalName
+#   Returns an array containing all the OUs. The array ir ordered in a
+#   hierarquical way. Parents before childs.
 #
 # Returns:
 #
-#       array ref - holding the OUs. Each user is represented by a
-#       EBox::Users::OU object
+#   array ref - holding the OUs. Each user is represented by a
+#   EBox::Users::OU object
 #
 sub ous
 {
-    my ($self) = @_;
+    my ($self, $baseDN) = @_;
 
     return [] if (not $self->isEnabled());
 
-    my $objectClass = $self->{ouClass}->mainObjectClass();
-    my %args = (
-        base => $self->ldap->dn(),
-        filter => "objectclass=$objectClass",
-        scope => 'sub',
-    );
-
-    my $result = $self->ldap->search(\%args);
-
-    my @ous = ();
-    foreach my $entry ($result->entries)
-    {
-        my $ou = $self->{ouClass}->new(entry => $entry);
-        push (@ous, $ou);
+    unless (defined $baseDN) {
+        $baseDN = $self->ldap->dn();
     }
 
-    my @sortedOUs = sort { $a->canonicalName(1) cmp $b->canonicalName(1) } @ous;
+    my $objectClass = $self->{ouClass}->mainObjectClass();
+    my $searchArgs = {
+        base => $baseDN,
+        filter => "objectclass=$objectClass",
+        scope => 'one',
+    };
 
-    return \@sortedOUs;
+    my $ous = [];
+    my $result = $self->ldap->search($searchArgs);
+    foreach my $entry ($result->entries()) {
+        my $ou = EBox::Users::OU->new(entry => $entry);
+        push (@{$ous}, $ou);
+        my $nested = $self->ous($ou->dn());
+        push (@{$ous}, @{$nested});
+    }
+
+    return $ous;
 }
 
 # Method: userByUID
