@@ -1,4 +1,5 @@
 HEAD
+	+ The "sub ous" return the OUs hierarquically ordered
 	+ Check for defined uidNumber and gidNumber creating users and groups
 	+ Wait for the services before ending the start daemon action to prevent
 	  its usage before being ready
